--- a/各种培训/路飞/Python Web开发专题课/前端开发.md
+++ b/各种培训/路飞/Python Web开发专题课/前端开发.md
@@ -159,3 +159,77 @@
 </div>
 ```
 
+### 知识回顾
+
+## 3 CSS样式
+
+css 专门用来“美化" 标签。
+
+#### 3.1快速了解
+
+```html
+<img src=".." style="height:100px"/>
+
+```
+
+#### 3.2 CSS应用方式
+
+##### 1、在标签上
+
+```html
+<img src="" style="">	
+```
+
+
+
+##### 2、在head标签中写style标签
+
+```html
+<head>
+    <style>
+        .c1{
+            color:red;
+        }
+    </style>
+</head>
+<body>
+    
+    <h1 class='c1'>
+        用户登录
+    </h1>
+</body>
+```
+
+##### 3、写到文件中
+
+```css
+.c1{
+    height:100px;
+}
+```
+
+
+
+```html
+<head>
+    
+    <link rel='stylesheet' href='common.css'>
+</head>
+```
+
+###案例：flask中的应用
+
+#### 3.3css选择器
+
+
+
+ID选择器
+
+类选择器
+
+标签选择器
+
+属性选择器
+
+后代选择器
+
