微信数据绑定

--- a/python笔记/小程序/数据绑定.md
+++ b/python笔记/小程序/数据绑定.md
@@ -392,4 +392,78 @@ e.currentTarget.dataset
 
 - 数据绑定
 - for指令
+  
   - 注意setData that
+
+#### 2.用户登录（手机号）
+
+##### 2.1 小程序
+
+- 数据双向绑定
+
+  -- wxml
+
+  ```
+  <input value="{{phone}}" bindinput="bindPhone" placeholder="请输入手机号" ></input>
+  ```
+
+  
+
+- js
+
+- - 
+
+-  ```
+    data: {
+      "phone": '',
+      "code": ''
+    },
+    bindPhone: function (e) {
+      // console.log(e);
+      this.setData({      phone: e.detail.value    });
+    },
+   ```
+
+- 网络请求API
+
+  ```javascript
+  wx.request({
+        url: 'http://127.0.0.1:8000/api/login/',
+        data: {
+          phone: this.data.phone,
+          code: this.data.code
+        },
+        dataType: 'json',
+        method: 'POST',
+        responseType: 'text',
+        timeout: 0,
+        success: (result) => {},
+        fail: (err) => {},
+        complete: (res) => {
+          console.log(res);
+        },
+      })
+    },
+  ```
+
+  在使用wx.request等网络请求的API时，需要遵循：
+
+  - 网络地址https
+
+  - 后台设置要访问的域名
+
+    本地测试：
+
+
+##### 2.2api
+
+- 创建虚拟环境
+
+  django
+
+  drf
+
+- 项目API
+  - login
+  - message
+
