--- a/python笔记/Django/Django+DRF框架项目实战/04、项目开发.md
+++ b/python笔记/Django/Django+DRF框架项目实战/04、项目开发.md
@@ -473,7 +473,6 @@ path('token/refresh/', TokenRefreshView.as_view(), name='token_refresh'),
 
 ```python
 from rest_framework import serializers
-
 from users.models import User
 
 
@@ -935,4 +934,280 @@ class AddrView(GenericViewSet,
 
 # 四、商品模块
 
+## 1、首页数据
+
+​	1、接口设计
+
+​	2、代码实现
+
+### 2、列表和详情
+
+### 3、商品收藏
+
 # 五、购物车模块
+
+## 1、定义模型类
+
+```python
+class Cart(BaseModel):
+    """购物车"""
+    user = models.ForeignKey('user.User', help_text='用户ID', verbose_name='用户ID', on_delete=models.CASCADE,
+                             blank=True)
+    goods = models.ForeignKey('goods.Goods', help_text='商品ID', verbose_name='商品ID', on_delete=models.CASCADE)
+    number = models.SmallIntegerField(help_text="商品数量", verbose_name='商品数量', default=1, blank=True)
+    is_checked = models.BooleanField(help_text='是否选中', verbose_name='是否选中', default=1, blank=True)
+
+    class Meta:
+        db_table = 'cart'
+        verbose_name = '购物车'
+        verbose_name_plural = verbose_name
+```
+
+
+
+## 2、定义序列化器类
+
+```python
+
+class CartSerializer(serializers.Serializer):
+    """购物车序列化器"""
+
+    class Meta:
+        model = models.Cart
+        fields = "__all__"
+```
+
+
+
+## 3、Admin注册
+
+## 4、功能实现
+
+### 1、添加商品到购物车
+
+1、接口设计
+
+接口描述：
+
+- 添加商品到购物车
+
+请求URL
+
+- /api/cart/goods/
+
+请求方式：
+
+- post
+
+请求头部
+
+| 参数名        | 必选 | 类型   | 说明      |
+| ------------- | ---- | ------ | --------- |
+| Authorization | 是   | string | JWT Token |
+
+Body请求体参数
+
+| 参数名 | 必选 | 类型 | 说明   |
+| ------ | ---- | ---- | ------ |
+| goods  | 是   | int  | 商品ID |
+| number | 是   | int  | 数量   |
+
+
+
+### 2、获取购物车商品列表
+
+1、接口设计
+
+​	接口描述：
+
+​		获取我的购物车商品
+
+请求URL
+
+- /api/cart/goods/
+
+请求方式
+
+- get
+
+请求头部：
+
+| 参数名        | 必选 | 类型   | 说明      |
+| ------------- | ---- | ------ | --------- |
+| Authorization | 是   | string | JWT token |
+
+Body请求体参数
+
+返回示例：
+
+- 状态码：200 获取成功
+
+### 	3、修改商品选中状态
+
+#### 1、接口设计
+
+接口描述：
+
+- 修改商品选中状态
+
+请求URL
+
+- /api/cart/goods/${id}/checked/
+
+请求方式：
+
+- put
+
+请求头部
+
+| 参数名        | 必选 | 类型   | 说明      |
+| ------------- | ---- | ------ | --------- |
+| Authorization | 是   | string | JWT token |
+
+Body请求参数：
+
+| 参数名 | 必选 | 类型 | 说明         |
+| ------ | ---- | ---- | ------------ |
+| id     | 是   | int  | 购物车商品ID |
+
+
+
+### 	4、修改商品数量
+
+请求URL：
+
+- /api/cart/goods/${id}/
+
+请求方式：
+
+- put
+
+请求头部
+
+| 参数名        | 必选 | 类型   | 说明      |
+| ------------- | ---- | ------ | --------- |
+| Authorization | 是   | string | JWT token |
+
+Body请求参数：
+
+| 参数名 | 必选 | 类型 | 说明 |
+| ------ | ---- | ---- | ---- |
+| number | 是   | int  | 数量 |
+
+返回示例：
+
+状态码：200 修改成功
+
+要求：
+
+- 校验参数不能为空
+- 用户只能修改自己的数据
+
+
+
+### 	5、删除购物车商品
+
+1、接口设计
+
+接口描述：
+
+- 删除购物车商品
+
+请求URL：
+
+- /api/cart/goods/${id}/
+
+请求头部
+
+| 参数名        | 必选 | 类型   | 说明      |
+| ------------- | ---- | ------ | --------- |
+| Authorization | 是   | string | JWT token |
+
+Body请求参数：
+
+返回示例：
+
+- 状态码：204 删除成功
+
+# 六、订单模块
+
+## 1、定义模型类
+
+## 2、定义序列化器类
+
+## 3、Admin注册
+
+## 4、功能实现
+
+### 1、提交订单
+
+1、接口设计
+
+接口描述：
+
+- 将购物车选中的商品提交为订单
+
+接口地址：
+
+- /api/order/order/
+
+请求方法：
+
+- post
+
+请求体参数：
+
+| 参数名  | 必选 | 类型 | 说明       |
+| ------- | ---- | ---- | ---------- |
+| addr_id | 是   | id   | 收货地址ID |
+
+请求参数示例：
+
+响应示例：
+
+
+
+要求：
+
+- 获取用户购物车中所有选中的商品
+- 校验商品库存是否满足
+
+### 2、获取订单列表
+
+1、接口设计
+
+接口描述：
+
+- 获取订单列表
+
+接口地址：
+
+- /api/order/order/
+
+请求方法：
+
+- get
+
+查询参数：
+
+| 参数名 | 类型 | 必填项 | 说明     |
+| ------ | ---- | ------ | -------- |
+| status | id   | 是     | 订单状态 |
+
+请求参数示例：
+
+响应示例：
+
+
+
+
+
+### 3、获取订单详情
+
+### 4、取消订单
+
+### 5、订单商品评价
+
+### 6、评价查询接口
+
+# 七、支付功能
